updates to social links and fixed about-sidebar content overflow

--- a/assets/scaffold.scss
+++ b/assets/scaffold.scss
@@ -409,7 +409,7 @@ details#PageTableOfContents {
 
 .about-sidebar {
   @extend .self-start, .sticky, .bg-#{$sidebarBgColor}, .#{$sidebarTextColor};
-  height: 100vh;
+  min-height: 100vh;
 }
 .about-sidebar a:not(.link) {
   @extend .#{$sidebarLinkColor};
